--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Vendas</h1>
+    <h1>Página de blog</h1>
     <a href="index.html">Ir para a página inicial</a>
-    <h2>Relatório de vendas</h2>
-    <p>Venda 1</p>
-    <p>Venda 2</p>
 </body>
 </html>
