Atualização do layout

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Página de blog</h1>
-    <a href="index.html">Ir para a página inicial</a>
+    <p>Bem-vindo a página do blog!</p>
 </body>
 </html>
